--- a/blog/navbar.yml
+++ b/blog/navbar.yml
@@ -2,6 +2,6 @@
   href: about-me.html
   target: _self
 
-- label: github
-  href: https://github.com/ericzhang-cn/papery
+- label: 北航主页
+  href: http://www.buaa.edu.cn
   target: _blank
